    <https://github.com/jhy/jsoup/issues/1603>

  * Bugfix: fixed an NPE when parsing fragment heading HTML into a standalone p element.
    <https://github.com/jhy/jsoup/issues/1601>

  * Bugfix: fixed an IOOB when parsing a formatting fragment into a standalone p element.
    <https://github.com/jhy/jsoup/issues/1602>

  * Bugfix [Fuzz]: fixed a slow parse when a tag or an attribute name has thousands of null characters in it.
    <https://github.com/jhy/jsoup/issues/1580>

  * Bugfix [Fuzz]: the adoption agency algorithm can have an incorrect bookmark position
    <https://github.com/jhy/jsoup/issues/1576>

  * Bugfix [Fuzz]: malformed HTML could result in null elements on stack
    <https://github.com/jhy/jsoup/issues/1579>

  * Bugfix [Fuzz]: malformed deeply nested table elements could create a stack overflow.
    <https://github.com/jhy/jsoup/issues/1577>

  * Bugfix [Fuzz]: Speed optimized malformed HTML creating elements with thousands of elements - limit the attribute
    count per element when parsing to 512 (in real-world HTML, P99 is ~ 8).
    <https://github.com/jhy/jsoup/issues/1578>

  * Bugfix [Fuzz]: Speed improvement for the foster formatting elements algo, by limiting how far up a crafted stack
    to scan.
    <https://github.com/jhy/jsoup/issues/1593>

  * Bugfix [Fuzz]: Speed improvement when parsing crafted HTML when transferring form attributes.
    <https://github.com/jhy/jsoup/issues/1595>

  * Bugfix [Fuzz]: Speed improvement when the stack was thousands of items deep, and non-matching close tags sent.
    <https://github.com/jhy/jsoup/issues/1596>

  * Bugfix [Fuzz]: Speed improvement when an attribute name is 600K of quote characters or otherwise needs accumulation
    vs being able to read in one hit.
    <https://github.com/jhy/jsoup/issues/1605>

  * Bugfix [Fuzz]: Speed improvement when closing missing empty tags (in XML comment processed as HTML) when thousands
    deep in stack.
    <https://github.com/jhy/jsoup/issues/1606>
